--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
             background-image: url(imagens/tela-home.jpg);
             background-repeat: no-repeat;
             background-position: top center;
+            background-size: cover;
         }
 
 
