--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </section>
 
         <section id="sociais">
-
+            <a href="#"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-github.jpg" alt=""></a>  <br>
+            <a href="#"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a>
         </section>
 
     </main>
